# config-plane

./: .gitignore  README.md  config_plane.py  main.py  pyproject.toml
config_plane/: __init__.py  base.py
config_plane/impl/: git.py  memory.py  sql.py
docs/: book.toml
docs/src/: SUMMARY.md  features.md  index.md  motivation.md  quickstart.md
tests/: test_git_repo.py  test_repo_common.py
