[project]
name = "config-plane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "marimo>=0.18.3",
    "pytest>=9.0.2",
    "pyzmq>=27.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
